<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:textSize="26sp"
        android:layout_gravity="start"
        android:layout_height="wrap_content" />

</FrameLayout>